# biped-stabilizer

./: .git-blame-ignore-revs  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  flake.nix  package.xml  setup.cfg
include/biped-stabilizer/: cop_stabilizer.hpp  python.hpp
include/biped_stabilizer/: cop_stabilizer.hpp  python.hpp
python/: CMakeLists.txt  biped_stabilizer.cpp  cop_stabilizer.cpp  eigen_isometry_3d.cpp
python/biped_stabilizer/: __init__.py  talos_conf.py  test_cop_stabilizer.py
src/: cop_stabilizer.cpp
tests/: CMakeLists.txt  test_cop_stabilizer.cpp
tests/cpp/: test_cop_stabilizer.cpp
tests/python/: talos_conf.py  test_cop_stabilizer.py
