<?xml version="1.0"?>
<package format="3">
  <name>biped_stabilizer</name>
  <version>0.0.0</version>
  <description>Stabilizer for biped locomotion</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author email="pierre.fernbach@toward.fr">Pierre Fernbach</author>
  <author email="maximilien.naveau@laas.fr">Maximilien Naveau</author>
  <author email="nahuel.villa@laas.fr">Nahuel Villa</author>
  <license>BSD</license>

  <url type="website">https://github.com/gepetto/biped_stabilizer</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>boost</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
